[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
anyhow = "1.0.68"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
dotenvy = "0.15.6"
hmac = "0.12.1"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rust-argon2 = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.25.0", features = ["rt"] }
