[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.68"
chrono = "0.4.23"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
surrealdb = "1.0.0-beta.8"
uuid = { version = "1.2.2", features = ["v4"] }
