[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
anyhow = "1.0.68"
chrono = "0.4.23"
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.25.0", features = ["rt"] }
