[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
anyhow = "1.0.69"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
dotenvy = "0.15.6"
futures-util = "0.3.27"
image = "0.24.5"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
mime = "0.3.16"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
surrealdb = "1.0.0-beta.8"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
