[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.21.3"
serde = { version = "1.0.154", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
