[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
description = "The Desktop App For Tracebook"
authors = ["Linus Walker", "Rize Kishimaro", "Ger Vaf", "Phyo Kyaw Than", "Kyaw Lwin Soe"]
license = "MIT"
readme = "The Desktop App for Tracebook"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
directories = "5.0.0"
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
image = "0.24.6"
infer = "0.13.0"
rfd = "0.11.2"
serde = { version = "1.0.154", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
ureq_multipart = "1.1.1"
