[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
wasm-bindgen = { version = "0.2.84", features = ["serde"] }
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr", "ssr"] }
yewdux = "0.9.0"
yewdux-functional = "0.1.0"
